Создан мрачный криминалистический дизайн с акцентом на красный цвет

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,97 @@
         .screen.active {
             display: flex;
         }
+
+        /* Кровавые брызги и эффекты для криминальной тематики */
+        .bloodstain {
+            position: absolute;
+            background-color: rgba(169, 0, 0, 0.5);
+            border-radius: 50%;
+            filter: blur(10px);
+            z-index: -1;
+        }
+
+        .bloodstain-1 {
+            width: 90px;
+            height: 90px;
+            top: 15%;
+            left: 10%;
+            transform: rotate(25deg);
+        }
+
+        .bloodstain-2 {
+            width: 120px;
+            height: 50px;
+            bottom: 25%;
+            right: 5%;
+            transform: rotate(-15deg);
+        }
+
+        .fingerprint {
+            position: absolute;
+            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path fill="red" opacity="0.08" d="M50,0C32.8,0,19,13.8,19,31c0,19.2,28.8,64,31,64s31-44.8,31-64C81,13.8,67.2,0,50,0z M50,54c-12.7,0-23-10.3-23-23 s10.3-23,23-23s23,10.3,23,23S62.7,54,50,54z"/></svg>');
+            width: 100px;
+            height: 100px;
+            z-index: -1;
+        }
+
+        .fingerprint-1 {
+            top: 10%;
+            right: 15%;
+            transform: rotate(45deg);
+        }
+
+        .fingerprint-2 {
+            bottom: 15%;
+            left: 20%;
+            transform: rotate(-30deg) scale(0.8);
+        }
+
+        .crime-tape {
+            position: absolute;
+            background-color: var(--primary-color);
+            color: black;
+            transform: rotate(-35deg);
+            font-size: 10px;
+            text-align: center;
+            padding: 2px 0;
+            width: 200px;
+            left: -50px;
+            top: 20px;
+            z-index: 1;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .crime-tape::before,
+        .crime-tape::after {
+            content: "не пересекать";
+            margin-right: 10px;
+        }
+
+        @keyframes flicker {
+
+            0%,
+            19.999%,
+            22%,
+            62.999%,
+            64%,
+            100% {
+                opacity: 1;
+            }
+
+            20%,
+            21.999%,
+            63%,
+            63.999% {
+                opacity: 0.4;
+            }
+        }
+
+        .logo h1 {
+            animation: flicker 4s infinite;
+        }
     </style>
 
     <!-- Подключение Telegram WebApp API ПЕРВЫМ -->
@@ -101,11 +192,18 @@
     <div class="container" style="display: none;">
         <!-- Стартовый экран -->
         <div class="screen" id="start-screen">
+            <!-- Декоративные элементы для криминальной тематики -->
+            <div class="bloodstain bloodstain-1"></div>
+            <div class="bloodstain bloodstain-2"></div>
+            <div class="fingerprint fingerprint-1"></div>
+            <div class="fingerprint fingerprint-2"></div>
+            <div class="crime-tape"></div>
+
             <div class="logo">
                 <h1>Криминальный Блеф</h1>
-                <p>Проверь свою наблюдательность</p>
+                <p>РАСКРОЙ ИСТИНУ В ЖЕСТОКОМ МИРЕ</p>
             </div>
-            <button class="primary-button" data-action="startGame">Играть</button>
+            <button class="primary-button" data-action="startGame">РАССЛЕДОВАТЬ</button>
         </div>
 
         <!-- Игровой экран -->
@@ -138,7 +236,7 @@
                 <div class="points-details" id="points-details">
                     <!-- Детали очков будут добавлены через JavaScript -->
                 </div>
-                <button data-action="nextQuestion" class="primary-button">Далее</button>
+                <button data-action="nextQuestion" class="primary-button">ДАЛЕЕ</button>
             </div>
         </div>
 
@@ -158,8 +256,8 @@
                     <p class="stats-line">Максимальная серия: <span id="max-streak">0</span></p>
                 </div>
                 <div class="action-buttons">
-                    <button data-action="restartGame" class="primary-button">Сыграть еще</button>
-                    <button data-action="goToMain" class="secondary-button">На главную</button>
+                    <button data-action="restartGame" class="primary-button">СЫГРАТЬ ЕЩЕ</button>
+                    <button data-action="goToMain" class="secondary-button">НА ГЛАВНУЮ</button>
                 </div>
             </div>
         </div>
