Обновление дизайна и добавление визуальных эффектов для криминальной атмосферы

--- a/public/index.html
+++ b/public/index.html
@@ -310,26 +310,36 @@
             <div class="bloodstain bloodstain-1"></div>
             <div class="bloodstain bloodstain-2"></div>
             <div class="bloodstain bloodstain-3"></div>
+
             <div class="fingerprint fingerprint-1"></div>
             <div class="fingerprint fingerprint-2"></div>
             <div class="fingerprint fingerprint-3"></div>
-            <div class="crime-tape"></div>
+
             <div class="chalk-outline"></div>
+
             <div class="footprint footprint-1"></div>
             <div class="footprint footprint-2"></div>
             <div class="footprint footprint-3"></div>
+
+            <!-- Лента на заднем плане -->
+            <div class="crime-tape"></div>
+
+            <!-- Полицейские ленты -->
             <div class="police-tape">МЕСТО ПРЕСТУПЛЕНИЯ • НЕ ПЕРЕСЕКАТЬ • МЕСТО ПРЕСТУПЛЕНИЯ • НЕ ПЕРЕСЕКАТЬ •</div>
             <div class="police-tape police-tape-2">МЕСТО ПРЕСТУПЛЕНИЯ • НЕ ПЕРЕСЕКАТЬ • МЕСТО ПРЕСТУПЛЕНИЯ • НЕ
                 ПЕРЕСЕКАТЬ •</div>
 
             <div class="logo">
+                <!-- Элементы крови и эффекты -->
                 <div class="blood-drip blood-drip-1"></div>
                 <div class="blood-drip blood-drip-2"></div>
                 <div class="blood-drip blood-drip-3"></div>
                 <div class="blood-streak"></div>
-                <h1>Криминальный Блеф</h1>
+
+                <h1>Криминальный<br>Блеф</h1>
                 <p>НАЙДИ УЛИКИ. РАСКРОЙ ТАЙНУ. ВЫЖИВИ.</p>
             </div>
+
             <button class="primary-button" data-action="startGame">НАЧАТЬ РАССЛЕДОВАНИЕ</button>
         </div>
 
