--- a/public/index.html
+++ b/public/index.html
@@ -237,6 +237,55 @@
             border-radius: 0 0 3px 3px;
             filter: blur(1px);
         }
+
+        /* Адаптивное позиционирование на больших экранах */
+        @media screen and (min-width: 768px) {
+            .bloodstain-1 {
+                width: 120px;
+                height: 120px;
+            }
+
+            .bloodstain-2 {
+                width: 150px;
+                height: 70px;
+            }
+
+            .bloodstain-3 {
+                width: 60px;
+                height: 80px;
+            }
+
+            .fingerprint {
+                width: 150px;
+                height: 150px;
+            }
+
+            .crime-tape {
+                width: 300px;
+                padding: 3px 0;
+                font-size: 12px;
+            }
+
+            .chalk-outline {
+                width: 180px;
+                height: 90px;
+            }
+
+            .blood-drip-1,
+            .blood-drip-2,
+            .blood-drip-3 {
+                transform: scale(1.2) rotate(45deg);
+            }
+        }
+
+        /* Скрытие некоторых декоративных элементов при очень узких экранах */
+        @media screen and (max-width: 360px) {
+
+            .fingerprint-3,
+            .bloodstain-3 {
+                display: none;
+            }
+        }
     </style>
 
     <!-- Подключение Telegram WebApp API ПЕРВЫМ -->
@@ -295,7 +344,7 @@
     </script>
 </head>
 
-<body data-theme="dark">
+<body data-theme="dark" class="adaptive-body">
     <!-- Контейнер для сообщения загрузки -->
     <div class="loading-container">
         <div class="loader"></div>
@@ -403,6 +452,32 @@
     <!-- Подключение JavaScript файлов -->
     <script src="game-state.js"></script>
     <script src="app.js"></script>
+
+    <!-- Скрипт для адаптивности на разных устройствах -->
+    <script>
+        // Определение типа устройства для дополнительных настроек
+        document.addEventListener('DOMContentLoaded', function () {
+            // Проверка ширины экрана
+            function checkScreenSize() {
+                if (window.innerWidth >= 1200) {
+                    document.body.classList.add('desktop-view');
+                    document.body.classList.remove('tablet-view', 'mobile-view');
+                } else if (window.innerWidth >= 768) {
+                    document.body.classList.add('tablet-view');
+                    document.body.classList.remove('desktop-view', 'mobile-view');
+                } else {
+                    document.body.classList.add('mobile-view');
+                    document.body.classList.remove('desktop-view', 'tablet-view');
+                }
+            }
+
+            // Выполняем при загрузке
+            checkScreenSize();
+
+            // Обновляем при изменении размера окна
+            window.addEventListener('resize', checkScreenSize);
+        });
+    </script>
 </body>
 
 </html>
