--- a/public/index.html
+++ b/public/index.html
@@ -36,94 +36,6 @@
             display: flex;
         }
 
-        /* Кровавые брызги и эффекты для криминальной тематики */
-        .bloodstain {
-            position: absolute;
-            background-color: rgba(169, 0, 0, 0.5);
-            border-radius: 50%;
-            filter: blur(10px);
-            z-index: -1;
-            opacity: 0.7;
-        }
-
-        .bloodstain-1 {
-            width: 90px;
-            height: 90px;
-            top: 15%;
-            left: 10%;
-            transform: rotate(25deg);
-        }
-
-        .bloodstain-2 {
-            width: 120px;
-            height: 50px;
-            bottom: 25%;
-            right: 5%;
-            transform: rotate(-15deg);
-        }
-
-        .bloodstain-3 {
-            width: 40px;
-            height: 60px;
-            bottom: 40%;
-            left: 15%;
-            transform: rotate(15deg);
-            filter: blur(8px);
-        }
-
-        /* Отпечатки пальцев */
-        .fingerprint {
-            position: absolute;
-            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path fill="red" opacity="0.08" d="M50,0C32.8,0,19,13.8,19,31c0,19.2,28.8,64,31,64s31-44.8,31-64C81,13.8,67.2,0,50,0z M50,54c-12.7,0-23-10.3-23-23 s10.3-23,23-23s23,10.3,23,23S62.7,54,50,54z"/></svg>');
-            width: 100px;
-            height: 100px;
-            z-index: -1;
-        }
-
-        .fingerprint-1 {
-            top: 10%;
-            right: 15%;
-            transform: rotate(45deg);
-        }
-
-        .fingerprint-2 {
-            bottom: 15%;
-            left: 20%;
-            transform: rotate(-30deg) scale(0.8);
-        }
-
-        .fingerprint-3 {
-            top: 65%;
-            right: 20%;
-            transform: rotate(10deg) scale(1.2);
-            opacity: 0.05;
-        }
-
-        /* Полицейская лента */
-        .crime-tape {
-            position: absolute;
-            background-color: var(--yellow-tape);
-            color: black;
-            transform: rotate(-35deg);
-            font-size: 10px;
-            text-align: center;
-            padding: 2px 0;
-            width: 200px;
-            left: -50px;
-            top: 20px;
-            z-index: 1;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-        }
-
-        .crime-tape::before,
-        .crime-tape::after {
-            content: "место преступления";
-            margin-right: 10px;
-        }
-
         /* Анимация мерцания для заголовка */
         @keyframes flicker {
 
@@ -146,145 +58,6 @@
 
         .logo h1 {
             animation: flicker 4s infinite;
-        }
-
-        /* Силуэт тела мелом */
-        .chalk-outline {
-            position: absolute;
-            width: 120px;
-            height: 60px;
-            z-index: -1;
-            opacity: 0.05;
-            bottom: 8%;
-            left: 5%;
-            transform: rotate(-5deg);
-            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 50"><path fill="none" stroke="white" stroke-width="0.5" d="M20,10 C25,5 35,5 40,10 C45,15 45,20 40,25 C35,30 25,30 20,25 C15,20 15,15 20,10 Z M30,25 L30,45 M25,35 L35,35 M20,45 L40,45" /></svg>');
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
-        }
-
-        /* Следы от обуви */
-        .footprint {
-            position: absolute;
-            width: 25px;
-            height: 60px;
-            background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 24"><path fill="white" opacity="0.07" d="M6,1C8.2,1,9,4,9,6C9,8,8.2,13,6,13C3.8,13,3,10.5,3,9C3,4,3.8,1,6,1z M6,13C7,14,8,19,7,22C6,24,3,24,2,22C1,20,3,18,4,16C5,14,5,13,6,13z"></path></svg>');
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
-            z-index: -1;
-            opacity: 0.15;
-        }
-
-        .footprint-1 {
-            bottom: 25%;
-            right: 30%;
-            transform: rotate(15deg);
-        }
-
-        .footprint-2 {
-            bottom: 15%;
-            right: 25%;
-            transform: rotate(25deg);
-        }
-
-        .footprint-3 {
-            bottom: 35%;
-            right: 35%;
-            transform: rotate(5deg);
-        }
-
-        /* Капли крови на логотипе */
-        .blood-drip {
-            position: absolute;
-            background-color: var(--primary-color);
-            border-radius: 50% 50% 0 50%;
-            transform: rotate(45deg);
-            z-index: 1;
-            filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.3));
-        }
-
-        .blood-drip-1 {
-            width: 10px;
-            height: 10px;
-            top: -10px;
-            left: 30%;
-        }
-
-        .blood-drip-2 {
-            width: 8px;
-            height: 8px;
-            top: -5px;
-            left: 50%;
-        }
-
-        .blood-drip-3 {
-            width: 12px;
-            height: 12px;
-            top: -8px;
-            left: 70%;
-        }
-
-        .blood-streak {
-            position: absolute;
-            background: linear-gradient(to bottom, var(--primary-color), transparent);
-            width: 3px;
-            height: 30px;
-            top: 0;
-            left: 50%;
-            opacity: 0.6;
-            border-radius: 0 0 3px 3px;
-            filter: blur(1px);
-        }
-
-        /* Адаптивное позиционирование на больших экранах */
-        @media screen and (min-width: 768px) {
-            .bloodstain-1 {
-                width: 120px;
-                height: 120px;
-            }
-
-            .bloodstain-2 {
-                width: 150px;
-                height: 70px;
-            }
-
-            .bloodstain-3 {
-                width: 60px;
-                height: 80px;
-            }
-
-            .fingerprint {
-                width: 150px;
-                height: 150px;
-            }
-
-            .crime-tape {
-                width: 300px;
-                padding: 3px 0;
-                font-size: 12px;
-            }
-
-            .chalk-outline {
-                width: 180px;
-                height: 90px;
-            }
-
-            .blood-drip-1,
-            .blood-drip-2,
-            .blood-drip-3 {
-                transform: scale(1.2) rotate(45deg);
-            }
-        }
-
-        /* Скрытие некоторых декоративных элементов при очень узких экранах */
-        @media screen and (max-width: 360px) {
-
-            .fingerprint-3,
-            .bloodstain-3 {
-                display: none;
-            }
         }
     </style>
 
@@ -370,11 +143,9 @@
             <div class="footprint footprint-2"></div>
             <div class="footprint footprint-3"></div>
 
-            <!-- Лента на заднем плане -->
-            <div class="crime-tape"></div>
-
-            <!-- Полицейские ленты -->
-            <div class="police-tape">МЕСТО ПРЕСТУПЛЕНИЯ • НЕ ПЕРЕСЕКАТЬ • МЕСТО ПРЕСТУПЛЕНИЯ • НЕ ПЕРЕСЕКАТЬ •</div>
+            <!-- Полицейские ленты с фиксированным позиционированием -->
+            <div class="police-tape police-tape-1">МЕСТО ПРЕСТУПЛЕНИЯ • НЕ ПЕРЕСЕКАТЬ • МЕСТО ПРЕСТУПЛЕНИЯ • НЕ
+                ПЕРЕСЕКАТЬ •</div>
             <div class="police-tape police-tape-2">МЕСТО ПРЕСТУПЛЕНИЯ • НЕ ПЕРЕСЕКАТЬ • МЕСТО ПРЕСТУПЛЕНИЯ • НЕ
                 ПЕРЕСЕКАТЬ •</div>
 
