Исправляю критические ошибки в интеграции игровых компонентов

--- a/public/index.html
+++ b/public/index.html
@@ -694,10 +694,6 @@
         </footer>
     </div>
 
-    <!-- Подключение JavaScript файлов для игры -->
-    <script src="game-state.js"></script>
-    <script src="app.js"></script>
-
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Инициализация Telegram WebApp
@@ -716,51 +712,8 @@
                     window.Telegram.WebApp.HapticFeedback.impactOccurred('medium');
                 }
 
-                // Проверяем готовность игры
-                if (typeof window.CriminalBluffApp !== 'undefined' && window.CriminalBluffApp.isReady()) {
-                    // Если приложение готово, просто запускаем игру
-                    if (typeof startGame === 'function') {
-                        startGame();
-                    }
-                } else {
-                    console.log('Принудительная инициализация игры...');
-
-                    // Показываем загрузку
-                    document.querySelector('.loading-container').style.display = 'flex';
-
-                    // Динамически подключаем скрипты для игры если их еще нет
-                    if (typeof GameState === 'undefined') {
-                        const gameStateScript = document.createElement('script');
-                        gameStateScript.src = 'game-state.js';
-                        document.body.appendChild(gameStateScript);
-                    }
-
-                    if (typeof initApp === 'undefined') {
-                        const appScript = document.createElement('script');
-                        appScript.src = 'app.js';
-                        document.body.appendChild(appScript);
-                    }
-
-                    // Ждем загрузки и запускаем
-                    setTimeout(() => {
-                        // Принудительно инициализируем
-                        if (typeof initApp === 'function') {
-                            initApp();
-                            // Даем время на инициализацию и запускаем игру
-                            setTimeout(() => {
-                                if (typeof startGame === 'function') {
-                                    startGame();
-                                } else {
-                                    alert('Не удалось запустить игру. Пожалуйста, обновите страницу.');
-                                    document.querySelector('.loading-container').style.display = 'none';
-                                }
-                            }, 1000);
-                        } else {
-                            alert('Не удалось загрузить игровые скрипты. Пожалуйста, обновите страницу.');
-                            document.querySelector('.loading-container').style.display = 'none';
-                        }
-                    }, 500);
-                }
+                // Переход на игровой экран
+                window.location.href = '/game';
             });
         });
     </script>
